# PCS-2026

./: nomedelfile.txt
Esercitazione3/: CMakeLists.txt  main.cpp  mio_programma  rational.hpp
Esercitazione3/build_es3/: CMakeCache.txt  Makefile  cmake_install.cmake  esercitazione3
esercitazione1/: CMakeLists.txt  funzione1.cpp  prog
esercitazione1/build_es1/: CMakeCache.txt  Makefile  myproject
esercitazione2/: CMakeLists.txt  bubblesort.cpp  es1.cpp  primi_algoritmi.cpp  prog
esercitazione2/build_es2/: CMakeCache.txt  Makefile  bubblesort  primi_algoritmi
esercitazione4/: CMakeLists.txt  measure_sort  measure_sorts.cpp  prova  prova.cpp  sort_algorithms.hpp  test_bubblesort  test_insertionsort  test_selectionsort  test_selectionsort.cpp
esercitazione5/: CMakeLists.txt  is_sorted.hpp  measure_sorts  measure_sorts.cpp  merge_and_quick.hpp  misure  prova  prova.cpp  sort_algorithms.hpp  test_bubblesort.cpp  test_insertionsort.cpp  test_mergesort.cpp  test_quicksort.cpp
esercitazione5/build_es5/: CMakeCache.txt  CTestTestfile.cmake  Makefile  measure_sorts  test_bubblesort  test_insertionsort  test_mergesort  test_quicksort  test_selectionsort
esercitazione5/build_es5/Testing/Temporary/: CTestCostData.txt
esercitazione6/: CMakeLists.txt  prova.cpp  test_grafo  unidirected_edge.hpp  unidirected_graph.hpp
esercitazione6/build_es6/: CMakeCache.txt  Makefile  cmake_install.cmake  esercitazione6
